--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <style>
     body{ 
@@ -6,16 +7,32 @@
     }
   </style>
 
+<head>
+  <title>GravanosCookBook</title>
+</head>
 
 <body>
-  <h1>Some famous Computer Scientists</h1>
-  <div>{{data}}</div>
+  <h1>Welcome to GravanosCookBook</h1>
+  <p>An all-in-one culinary experience for cooking enthusiasts like you!</p>
 
+  <h2>Recipe Categories</h2>
   <div>
-    {% for n in data %}
-    <div>{{n}}</div>
+    {% for category_name in categories %}
+    <div>{{category_name}}</div>
     {% endfor %}
   </div>
+
+  <h2>Top 5 Recipes</h2>
+  <div>
+    {% for recipe in recipes %}
+    <div>{{recipe[0]}} by {{recipe[1]}} - Rating: {{recipe[2]}}</div>
+    {% endfor %}
+  </div>
+
+
+  <p>View all recipes</p>
+
+  <p>Search for a recipe: </p>
 
 <p><a href="another">Go to the other page</a></p>
 
@@ -24,6 +41,5 @@
 </form>
 
 </body>
-
 
 </html>
