Fixed minor error in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
   <h2>Recipe Categories</h2>
   <div>
     {% for category_name in categories %}
-    <div><a href="{{ url_for('category', category_name=category.name) }}">{{ category.name }}</a></div>
+    <div><a href="{{ url_for('category', category_name=category_name) }}">{{ category_name }}</a></div>
     {% endfor %}
   </div>
 
