--- a/templates/category_recipes.html
+++ b/templates/category_recipes.html
@@ -13,10 +13,7 @@
 
 <body>
   <h1>GravanosCookBook</h1>
-
   <h2>{{category}} Recipes</h2>
-  <p>These are all the recipies in the selected category: {{category}}</p>
-
   {% if recipes %}
     <table>
         <tr>
@@ -40,7 +37,7 @@
         {% endfor %}
     </table>
   {% else %}
-    <p>There are no recipes added to this category yet</p>
+    <p>There are no recipes added to this category yet.</p>
   {% endif %}
   
   <h3><a href="/">Go back to main page</a></h3>
