Fixed url to use CategoryID instead of CategoryName

--- a/templates/category_recipes.html
+++ b/templates/category_recipes.html
@@ -8,12 +8,12 @@
   </style>
 
 <head>
-  <title>GravanosCookBook - {{category}}</title>
+  <title>GravanosCookBook - {{name}}</title>
 </head>
 
 <body>
   <h1>GravanosCookBook</h1>
-  <h2>{{category}} Recipes</h2>
+  <h2>{{name}} Recipes</h2>
   {% if recipes %}
     <table>
         <tr>
