--- a/templates/index.html
+++ b/templates/index.html
@@ -29,11 +29,10 @@
     {% endfor %}
   </div>
 
-  <h3>View all recipes</h3>
+  <p><a href="recipes">View all recipes</a></p>
 
   <p>Search for a recipe: </p>
 
-<p><a href="another">Go to the other page</a></p>
 
 <form method="POST" action="/add">
 <p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
