--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -32,8 +32,7 @@
         <td>{{ recipe[1] }}</td> <!-- Author -->
         <td>
             {% for category_name, category_id in recipe[2] %} <!-- recipe[2]=[(CategoryName, CategoryID)] -->
-              <a href="{{ url_for('category', category_id=category_id) }}">{{ category_name }}</a>
-              {% if not loop.last %}, {% endif %}
+              <a href="{{ url_for('category', category_id=category_id) }}">{{ category_name }}</a>{% if not loop.last %}, {% endif %}
             {% endfor %}
         </td> 
         <td>{{ recipe[3] }}</td> <!-- Total Time -->
