--- a/templates/category_recipes.html
+++ b/templates/category_recipes.html
@@ -27,7 +27,7 @@
     
         {% for recipe in recipes %}
         <tr>
-        <td>{{ recipe[0] }}</td> <!-- Recipe Name -->
+        <td><a href="/recipe/{{ recipe[6] }}">{{ recipe[0] }}</a></td> <!-- recipe[0]=RecipeName, recipe[6]=RecipeID -->
         <td>{{ recipe[1] }}</td> <!-- Author -->
         <td>{{ recipe[2] }}</td> <!-- Total Time -->
         <td>{{ recipe[3] }}</td> <!-- Aggregated Rating -->
