--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -46,7 +46,7 @@
     <p>There are no recipes added to GravanosCookBook.</p>
   {% endif %}
   
-  <h3><a href="/">Go back to main page</a></h3>
+  <h3><a href="/">Go to main page</a></h3>
 
 </body>
 
