--- a/templates/category_recipes.html
+++ b/templates/category_recipes.html
@@ -40,7 +40,7 @@
     <p>There are no recipes added to this category yet.</p>
   {% endif %}
   
-  <h3><a href="/">Go back to main page</a></h3>
+  <h3><a href="/">Go to main page</a></h3>
 
 </body>
 
