--- a/templates/recipe_insights.html
+++ b/templates/recipe_insights.html
@@ -42,7 +42,13 @@
 
   <h3>Ingredients</h3>
   {% for ingredient_id, ingredient in ingredients.items() %}
-    <p>{{ ingredient.itemamount }} <a href="{{ url_for('ingredient', ingredient_id=ingredient_id) }}">{{ ingredient.ingredientname }}</a></p>
+      <p>{{ ingredient.itemamount }}
+          {% if ingredient.wholefoods %} <!-- Add the link only when ingredient has associated Whole Foods products -->
+              <a href="{{ url_for('ingredient', ingredient_id=ingredient_id) }}">{{ ingredient.ingredientname }}</a>
+          {% else %}
+              {{ ingredient.ingredientname }}
+          {% endif %}
+      </p>
   {% endfor %}
 
   <hr>
