--- a/templates/ingredient.html
+++ b/templates/ingredient.html
@@ -8,7 +8,7 @@
   </style>
 
 <head>
-    <title>GravanosCookBook - {{ ingredientname }}</title>
+    <title>GravanosCookBook - {{ ingredientname.title() }}</title>
 </head>
 
 <body>
@@ -18,7 +18,6 @@
 
         <table>
             <tr>
-            <th>Product ID</th>
             <th>Company Name</th>
             <th>Product Name</th>
             <th>Regular Price</th>
@@ -29,7 +28,6 @@
 
             {% for product_id, product in products.items() %}
                 <tr>
-                <td>{{ product_id }}</td> 
                 <td>{{ product.companyname }}</td> 
                 <td>{{ product.productname }}</td>
                 <td>{{ product.regularprice }}</td>
