--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,15 @@
 
   <p><a href="recipes">View all recipes</a></p>
 
-  <p>Search for a recipe: </p>
-
+  <form action="{{ url_for('search_results') }}" method="get">
+    <label for="search-for">Search for a recipe:</label>
+    <select name="search_type" id="search-type">
+      <option value="name">Name</option>
+      <option value="author">Author</option>
+    </select>
+    <input type="text" name="query" required>
+    <button type="submit">Search</button>
+  </form>
 
 <form method="POST" action="/add">
 <p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
