--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,17 @@
   <h1>Welcome to GravanosCookBook</h1>
   <p>An all-in-one culinary experience for cooking enthusiasts like you!</p>
 
+  <h2>Search Recipe</h2>
+  <form action="{{ url_for('search_results') }}" method="get">
+    <label for="search-for">Search for a recipe:</label>
+    <select name="search_type" id="search-type">
+      <option value="name">Name</option>
+      <option value="author">Author</option>
+    </select>
+    <input type="text" name="query" required>
+    <button type="submit">Search</button>
+  </form>
+
   <h2>Recipe Categories</h2>
   <div>
     {% for category in categories %}
@@ -29,17 +40,10 @@
     {% endfor %}
   </div>
 
-  <h2><a href="recipes">View all recipes</a></h2>
+  <h2>All Recipes</h2>
+  <p><a href="recipes">View all recipes</a></p>
 
-  <form action="{{ url_for('search_results') }}" method="get">
-    <label for="search-for">Search for a recipe:</label>
-    <select name="search_type" id="search-type">
-      <option value="name">Name</option>
-      <option value="author">Author</option>
-    </select>
-    <input type="text" name="query" required>
-    <button type="submit">Search</button>
-  </form>
+
 
 </body>
 
