--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,14 @@
   <h1>Welcome to GravanosCookBook</h1>
   <p>An all-in-one culinary experience for cooking enthusiasts like you!</p>
 
-  <hr>
-  
+  <form action="{{ url_for('set_user') }}" method="post">
+    <select name="user_id" onchange="this.form.submit()">
+        {% for user_id, displayname in users.items() %}
+            <option value="{{ user_id }}">{{ displayname }}</option>
+        {% endfor %}
+    </select>
+  </form>
+
   <form action="{{ url_for('search_results') }}" method="get">
     <label for="search-for">Search for a recipe:</label>
     <select name="search_type" id="search-type">
