--- a/templates/index.html
+++ b/templates/index.html
@@ -16,12 +16,21 @@
   <p>An all-in-one culinary experience for cooking enthusiasts like you!</p>
 
   <form action="{{ url_for('set_user') }}" method="post">
-    <select name="user_id" onchange="this.form.submit()">
+    <label for="user_id">Select a user: </label>
+    <select name="user_id" id="user_id" onchange="this.form.submit()">
         {% for user_id, displayname in users.items() %}
-            <option value="{{ user_id }}">{{ displayname }}</option>
+            <option value="{{ user_id }}" {% if user_id == session['user_id'] %}selected{% endif %}>
+                {{ displayname }}
+            </option>
         {% endfor %}
     </select>
-  </form>
+</form>
+
+{% if session['user_id'] %}
+    <p>Current user is {{ users[session['user_id']] }}</p>
+{% else %}
+    <p>No user selected.</p>
+{% endif %}
 
   <form action="{{ url_for('search_results') }}" method="get">
     <label for="search-for">Search for a recipe:</label>
