--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
       <select name="user_id" id="user_id" onchange="this.form.submit()">
           <option value="">-- None --</option>
           {% for user_id, displayname in users.items() %}
-              <option value="{{ user_id }}" {% if user_id|string == session.get('user_id', '') %}selected{% endif %}>
+              <option value="{{ user_id }}" {% if user_id == session.get('user_id', '') %}selected{% endif %}>
                   {{ displayname }}
               </option>
           {% endfor %}
@@ -31,7 +31,7 @@
 
   <span>
       {% if session.get('user_id') %}
-          Current user is {{ users[session['user_id']|int] }}
+          Current user is {{ users[session['user_id'] }}
       {% else %}
           No user selected.
       {% endif %}
