--- a/templates/ingredient.html
+++ b/templates/ingredient.html
@@ -13,6 +13,27 @@
 
 <body>
     <h1>GravanosCookBook</h1>
+
+    <form action="{{ url_for('set_user') }}" method="post" style="display: inline;">
+        <label for="user_id">Select a user: </label>
+        <select name="user_id" id="user_id" onchange="this.form.submit()">
+            <option value="">-- None --</option>
+            {% for user_id, displayname in users.items() %}
+                <option value="{{ user_id }}" {% if user_id == session.get('user_id', '') %}selected{% endif %}>
+                    {{ displayname }}
+                </option>
+            {% endfor %}
+        </select>
+    </form>
+  
+    <span>
+        {% if session.get('user_id') %}
+            Current user is {{ users[session['user_id']] }}
+        {% else %}
+            No user selected.
+        {% endif %}
+    </span>
+
     {% if products %}
         <h2>{{ ingredientname.title() }} available at Whole Foods Market</h2>
 
