--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -29,7 +29,7 @@
     <input type="number" name="rating" value="{{ review['Rating'] }}" min="1" max="5" required>
     
     <label for="content">Review:</label>
-    <textarea name="content" required>{{ review['Content'] }}</textarea>
+    <textarea name="content">{{ review['Content'] }}</textarea>
     
     <button type="submit">Update Review</button>
   </form>
