--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -26,10 +26,10 @@
 
   <form action="{{ url_for('edit_review', recipe_id=recipe_id, review_number=review_number) }}" method="post">
     <label for="rating">Rating (1-5):</label>
-    <input type="number" name="rating" value="{{ review['Rating'] }}" min="1" max="5" required>
+    <input type="number" name="rating" value="{{ review.rating }}" min="1" max="5" required>
     
     <label for="content">Review:</label>
-    <textarea name="content">{{ review['Content'] }}</textarea>
+    <textarea name="content">{{ review.content }}</textarea>
     
     <button type="submit">Update Review</button>
   </form>
