--- a/templates/submit_review.html
+++ b/templates/submit_review.html
@@ -26,12 +26,13 @@
 
   <form action="{{ url_for('submit_review', recipe_id=recipe_id) }}" method="post">
     <label for="rating">Rating (1-5):</label>
-    <input type="number" id="rating" name="rating" min="1" max="5" required>
-
+    <input type="number" id="rating" name="rating" min="1" max="5" required
+            style="width: 30px; height: 30px; font-size: 16px;"> 
+    <br>
     <label for="content">Review:</label>
-    <textarea id="content" name="content"></textarea>
+    <textarea id="content" name="content" style="width: 100%; height: 150px; font-size: 16px;"></textarea>
 
-    <button type="submit">Submit Review</button>
+    <button type="submit" style="font-size: 16px; padding: 10px 20px;">Submit Review</button>
   </form>
 
   <h4><a href="/">Go to main page</a></h4>
