--- a/templates/recipe_insights.html
+++ b/templates/recipe_insights.html
@@ -111,6 +111,9 @@
         {% if session.get('user_id') == review.userid %} <!-- Display Edit link only when current user is author of review -->
             <p><a href="{{ url_for('edit_review', recipe_id=recipe.recipeid, review_number=reviewnumber) }}">Edit</a></p>
         {% endif %}
+        {% if session.get('user_id') == review.userid %} <!-- Display Delete link only when current user is author of review -->
+            <p><a href="{{ url_for('delete_review', recipe_id=recipe.recipeid, review_number=reviewnumber) }}">Delete</a></p>
+        {% endif %}
         <hr>
     </div>
   {% endfor %}
