--- a/templates/category_recipes.html
+++ b/templates/category_recipes.html
@@ -51,7 +51,7 @@
         <td><a href="/recipe/{{ recipe[6] }}">{{ recipe[0] }}</a></td> <!-- recipe[0]=RecipeName, recipe[6]=RecipeID -->
         <td>{{ recipe[1] }}</td> <!-- Author -->
         <td>{{ recipe[2] }}</td> <!-- Total Time -->
-        <td>{{ recipe[3] }}</td> <!-- Aggregated Rating -->
+        <td>{{ "{:.1f}".format(recipe[3]) }}</td> <!-- Aggregated Rating -->
         <td>
             {% if recipe[4] %}
                 {{ recipe[4] }} <!-- Calories -->
