--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,8 @@
 
   <h2><a href="recipes">All recipes</a></h2>
 
+  <h2><a href="{{ url_for('submit_recipe') }}">Submit a new recipe</a></h2>
+
 </body>
 
 </html>
