--- a/templates/submit_recipe.html
+++ b/templates/submit_recipe.html
@@ -40,9 +40,9 @@
     <br>
     
     <label for="cook_hours">Cooking Time:</label>
-    <input type="number" id="cook_hours" name="cook_hours" min="0" placeholder="hours" required 
+    <input type="number" id="cook_hours" name="cook_hours" min="0" step="1" placeholder="hours" required 
            style="width: 50px; height: 30px; font-size: 16px;"> 
-    <input type="number" id="cook_minutes" name="cook_minutes" min="0" max="59" placeholder="minutes" required 
+    <input type="number" id="cook_minutes" name="cook_minutes" min="0" max="59" step="1" placeholder="minutes" required 
            style="width: 50px; height: 30px; font-size: 16px;">
     <br>
     <br>  
