--- a/templates/submit_recipe.html
+++ b/templates/submit_recipe.html
@@ -24,7 +24,34 @@
 
   <h2>Submit a new recipe</h2>
 
-  <form action="{{ url_for('submit_recipe') }}" method="post">
+  <script>
+    function validateForm() {
+        var checkboxes = document.querySelectorAll('input[name="categories"]:checked');
+        var ingredientsSelected = false;
+    
+        document.querySelectorAll('input[name="ingredients"]').forEach(function(checkbox) {
+            var amountInput = document.querySelector('input[name="amount-' + checkbox.value + '"]');
+            if (checkbox.checked && amountInput && amountInput.value) {
+                ingredientsSelected = true;
+            }
+        });
+    
+        if (checkboxes.length === 0) {
+            alert('Please select at least one category.');
+            return false;
+        }
+        
+        if (!ingredientsSelected) {
+            alert('Please select at least one ingredient and specify an amount.');
+            return false;
+        }
+        
+        return true;
+    }
+    </script>
+    
+  <form action="{{ url_for('submit_recipe') }}" method="post" onsubmit="return validateForm()">
+    <!-- Recipe Information -->
     <label for="recipename">Recipe Name:</label>
     <input type="text" id="recipename" name="recipename" maxlength="80" required
             style="width: 400px; height: 30px; font-size: 16px;"> 
@@ -67,6 +94,33 @@
 
     <label for="sugar">Sugar (in grams):</label>
     <input type="number" id="sugar" name="sugar" min="0" step="any" style="width: 70px; height: 30px; font-size: 16px;">
+    <br>
+    <br>
+
+    <!-- Category Information -->
+    <label>Categories:</label>
+    <div id="category-list">
+        {% for categoryid, categoryname in categories.items() %}
+        <div class="category">
+            <input type="checkbox" id="category-{{ categoryid }}" name="categories" value="{{ categoryid }}">
+            <label for="category-{{ categoryid }}">{{ categoryname }}</label>
+        </div>
+        {% endfor %}
+    </div>
+    <br>
+    <br>
+
+    <!-- Ingredient Information-->
+    <label>Ingredients:</label>
+    <div id="ingredients-list">
+        {% for ingredientid, ingredientname in ingredients.items() %}
+        <div class="ingredient">
+            <input type="checkbox" id="ingredient-{{ ingredientid }}" name="ingredients" value="{{ ingredientid }}">
+            <label for="ingredient-{{ ingredientid }}">{{ ingredientname }}</label>
+            <input type="number" name="amount-{{ ingredientid }}" min="0.01" step="0.01" placeholder="Amount">
+        </div>
+        {% endfor %}
+    </div>
     <br>
     <br>
 
