Added submitting new recipe - added choosing categories and ingredients

--- a/templates/submit_recipe.html
+++ b/templates/submit_recipe.html
@@ -59,9 +59,9 @@
     <br>
 
     <label for="prep_hours">Preparation Time:</label>
-    <input type="number" id="prep_hours" name="prep_hours" min="0" placeholder="hours" required 
+    <input type="number" id="prep_hours" name="prep_hours" min="0" placeholder="hrs" required 
            style="width: 50px; height: 30px; font-size: 16px;"> 
-    <input type="number" id="prep_minutes" name="prep_minutes" min="0" max="59" placeholder="minutes" required 
+    <input type="number" id="prep_minutes" name="prep_minutes" min="0" max="59" placeholder="mins" required 
            style="width: 50px; height: 30px; font-size: 16px;">
     <br>
     <br>
