--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -37,6 +37,35 @@
   <h2>All Recipes</h2>
 
   {% if recipes %}
+  <form action="{{ url_for('filter_recipes', context='all') }}" method="get">
+    <h3>Filter recipes by</h3>
+    
+    <label>Calories:</label>
+    <select name="calories" multiple>
+        <option value="less200">Less than or equal to 200</option>
+        <option value="200to400">200 to 400</option>
+        <option value="400to600">400 to 600</option>
+        <option value="600to800">600 to 800</option>
+        <option value="more800">More than or equal to 800</option>
+    </select>
+
+    <label>Sugar:</label>
+    <input type="checkbox" name="sugar" value="true"> Ascending Order by Sugar Content
+
+    <label>Aggregated Rating:</label>
+    <input type="checkbox" name="aggregatedrating" value="true"> Descending Order by Aggregated Rating
+
+    <label>Total Time:</label>
+    <select name="totaltime" multiple>
+        <option value="less30">Less than or equal to 30 min</option>
+        <option value="30to60">30 min to 1 hr</option>
+        <option value="60to120">1 hr to 2 hr</option>
+        <option value="more120">More than or equal to 2 hr</option>
+    </select>
+
+    <button type="submit">Apply Filters</button>
+  </form>
+
     <table>
         <tr>
         <th>Recipe Name</th>
