Added filtering - minor fix

--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -49,12 +49,6 @@
         <option value="more800">More than or equal to 800</option>
     </select>
 
-    <label>Sugar:</label>
-    <input type="checkbox" name="sugar" value="true"> Ascending Order by Sugar Content
-
-    <label>Aggregated Rating:</label>
-    <input type="checkbox" name="aggregatedrating" value="true"> Descending Order by Aggregated Rating
-
     <label>Total Time:</label>
     <select name="totaltime" multiple>
         <option value="less30">Less than or equal to 30 min</option>
@@ -63,6 +57,14 @@
         <option value="more120">More than or equal to 2 hr</option>
     </select>
 
+    <br>
+
+    <label>, Aggregated Rating:</label>
+    <input type="checkbox" name="aggregatedrating" value="true"> Descending Order
+
+    <label>Sugar:</label>
+    <input type="checkbox" name="sugar" value="true"> Ascending Order
+ 
     <button type="submit">Apply Filters</button>
   </form>
 
