Added filtering - minor fix

--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -59,10 +59,10 @@
 
     <br>
 
-    <label>, Aggregated Rating:</label>
+    <label>Aggregated Rating:</label>
     <input type="checkbox" name="aggregatedrating" value="true"> Descending Order
 
-    <label>Sugar:</label>
+    <label>, Sugar:</label>
     <input type="checkbox" name="sugar" value="true"> Ascending Order
  
     <button type="submit">Apply Filters</button>
