--- a/templates/category_recipes.html
+++ b/templates/category_recipes.html
@@ -106,7 +106,7 @@
         {% endfor %}
     </table>
   {% else %}
-    <p>There are no recipes added to this category yet.</p>
+    <p>There are no matching recipes.</p>
   {% endif %}
   
   <h3><a href="/">Go to main page</a></h3>
