--- a/templates/view_bookmarks.html
+++ b/templates/view_bookmarks.html
@@ -8,7 +8,7 @@
   </style>
 
 <head>
-  <title>GravanosCookBook - Search Results</title>
+  <title>GravanosCookBook - Bookmarked Recipes</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
       {% endif %}
   </span>
 
-  <h2>Search Results</h2>
+  <h2>Bookmarked Recipes</h2>
 
   {% if recipes %}
     <table>
@@ -46,12 +46,13 @@
         <th>Aggregated Rating</th>
         <th>Calories</th>
         <th>Sugar (grams)</th>
+        <th>Remove Bookmark</th>
         </tr>
     
         {% for recipe_id, recipe in recipes.items() %}
         <tr>
         <td><a href="/recipe/{{ recipe_id }}">{{ recipe.recipename }}</a></td> 
-        <td><a href="{{ url_for('user_profile', user_id=recipe.authorid) }}">{{ recipe.displayname }}</a></td> 
+        <td>{{ recipe.displayname }}</td> 
         <td>
             {% for category_name, category_id in recipe.categories %} <!-- recipe.categories = [(CategoryName, CategoryID)] -->
               <a href="{{ url_for('category', category_id=category_id) }}">{{ category_name }}</a>{% if not loop.last %}, {% endif %}
@@ -73,11 +74,16 @@
                 N/A
             {% endif %}
         </td>
+        <td>
+            <form action="{{ url_for('remove_bookmark', recipe_id=recipe_id) }}" method="post">
+                <button type="submit">Remove</button>
+            </form>
+        </td>
         </tr>
         {% endfor %}
     </table>
   {% else %}
-    <p>No matching results found.</p>
+    <p>There are no bookmarked recipes.</p>
   {% endif %}
   
   <h3><a href="/">Go to main page</a></h3>
