--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -38,19 +38,22 @@
 
   <p><strong>Reviews Written:</strong> {{ user.reviewswritten }}</p>
   <p><strong>Following:</strong> {{ user.following }}</p>
+  {% if author %} <!-- Display these info if the user is an author -->
+  <p><strong>Recipes Written:</strong> {{ author.recipeswritten }}</p>
+  <p><strong>Followers:</strong> {{ author.followers }}</p>
+  {% endif %}
+
+  <br>
 
   {% if session.get('user_id') == user.userid %} <!-- Display these info only when current user is viewing their profile -->
     <p><strong>First Name:</strong> {{ user.firstname }}</p>
     <p><strong>Last Name:</strong> {{ user.lastname }}</p>
-    <p><strong>Email:</strong> {{ user.Email }}</p>
+    <p><strong>Email:</strong> {{ user.email }}</p>
     <p><strong>Date of Birth:</strong> {{ user.dob }}</p>
     <p><a href="{{ url_for('view_bookmarks') }}">My Bookmarks</a></p>
   {% endif %}
 
-  {% if author %} <!-- Display these info if the user is an author -->
-    <p><strong>Recipes Written:</strong> {{ author.recipeswritten }}</p>
-    <p><strong>Followers:</strong> {{ author.followers }}</p>
-  {% endif %}
+
 
   <h3><a href="/">Go to main page</a></h3>
 
