Added bookmark feature and user profile page

--- a/templates/bookmark_message.html
+++ b/templates/bookmark_message.html
@@ -18,6 +18,12 @@
 
   <p>{{ message }}</p>
 
+  <br>
+
+  <p><a href="{{ url_for('view_bookmarks') }}">My Bookmarks</a></p>
+
+  <br>
+
   <h4><a href="#" onclick="goBack()">Go to previous page</a></h4>
   
   <script>
