Added follow/unfollow feature

--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -51,6 +51,7 @@
                 <button type="submit">Follow</button>
             </form>
         {% endif %}
+    {% endif %}
   {% endif %}
 
   <br>
