Added recipe recommendations

--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -64,6 +64,7 @@
     <p><a href="{{ url_for('view_bookmarks') }}">My Bookmarks</a></p>
     <p><a href="{{ url_for('user_following', user_id=user.userid) }}">Following</a></p>
     <p><a href="{{ url_for('user_followers', user_id=user.userid) }}">Followers</a></p>
+    <p><a href="{{ url_for('recipe_recommendations', user_id=user.userid) }}">Recommended Recipes</a></p>
   {% endif %}
 
   <br>
